Secret, Dockerfile, Makefile refactor

--- a/deploy/helm/kubenetmon-server/templates/secret.yaml
+++ b/deploy/helm/kubenetmon-server/templates/secret.yaml
@@ -1,37 +1,8 @@
-{{- define "kubeContext" -}}
-apiVersion: v1
-kind: Config
-clusters:
-- cluster:
-    certificate-authority-data: {{ .ca }}
-    server: {{ .server }}
-  name: {{ .name }}
-contexts:
-- context:
-    cluster: {{ .name }}
-    user: kubenetmon-server
-    namespace: default
-  name: {{ .name }}
-current-context: {{ .name }}
-users:
-- name: kubenetmon-server
-  user:
-    token: {{ .token }}
-{{- end }}
----
 apiVersion: v1
 kind: Secret
 metadata:
-  name: kubenetmon-server
-  labels:
-    {{- include "kubenetmon-server.labels" . | nindent 4 }}
-stringData:
-  {{- $clusters := dict -}}
-  {{- range $key, $value := .Values.clusterCredentials }}
-  {{- $cluster := dict "name" $key "ca" (default "" $value.certificateAuthorityDataBase64) "server" (default "" $value.server) "token" (default "" $value.tokenBase64) -}}
-  {{- $clusters = merge $clusters (dict $key $cluster) -}}
-  {{- end -}}
-  {{- range $key, $value := $clusters }}
-  {{ $key }}: |
-    {{- include "kubeContext" $value | nindent 4 }}
-  {{- end -}}
+  name: clickhouse-credentials
+type: Opaque
+data:
+  username: {{ .Values.inserter.username | b64enc }}
+  password: {{ .Values.inserter.password | b64enc }}
