--- a/.github/workflows/kubenetmon.yaml
+++ b/.github/workflows/kubenetmon.yaml
@@ -30,25 +30,25 @@ jobs:
         with:
           version: v1.60
 
-  test:
-    name: Test code
-    needs: golangci
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: '1.23'
-          cache: true
-          cache-dependency-path: go.sum
-      - name: Run tests
-        run: |
-          make test
-          make integration-test
+  # test:
+  #   name: Test code
+  #   needs: golangci
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: actions/setup-go@v5
+  #       with:
+  #         go-version: '1.23'
+  #         cache: true
+  #         cache-dependency-path: go.sum
+  #     - name: Run tests
+  #       run: |
+  #         make test
+  #         make integration-test
       
   build-docker-image:
     name: Build Docker image
-    needs: test
+    # needs: test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     permissions:
