Don't wait to package

--- a/.github/workflows/kubenetmon.yaml
+++ b/.github/workflows/kubenetmon.yaml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   golangci:
-    name: lint
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -161,7 +161,8 @@ jobs:
 
   docker-publish:
     name: Publish Docker image
-    needs: [golangci, test, build-docker-image, helm-test]
+    needs: [golangci, build-docker-image, helm-test]
+    # needs: [golangci, test, build-docker-image, helm-test]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     permissions:
@@ -195,7 +196,8 @@ jobs:
 
   helm-publish:
     name: Package and publish Helm charts
-    needs: [golangci, test, build-docker-image, helm-test]
+    needs: [golangci, build-docker-image, helm-test]
+    # needs: [golangci, test, build-docker-image, helm-test]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     permissions:
