Reinstate workflow permissions

--- a/.github/workflows/kubenetmon.yaml
+++ b/.github/workflows/kubenetmon.yaml
@@ -159,6 +159,9 @@ jobs:
     needs: [golangci, test, build-docker-image, helm-test]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -200,6 +203,9 @@ jobs:
     needs: [golangci, test, build-docker-image, helm-test]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
+      packages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
