Set a default ClickHouse password required by newest ClickHouse images
ClickHouse now requires a password to be set for the default user. Also address issues with golangci-lint configuration.

--- a/deploy/helm/kubenetmon-server/values.yaml
+++ b/deploy/helm/kubenetmon-server/values.yaml
@@ -57,7 +57,7 @@ inserter:
   database: "default"
   endpoint: "clickhouse.default.svc.cluster.local:9000"
   username: "default"
-  password: ""
+  password: "clickhouse"
   dialTimeout: 30s
   maxIdleConnections: 50
   batchSize: 15000
