add insecure skip verify option on clickhouse tls connection to allow invalid certificates on internal cluster connection

--- a/deploy/helm/kubenetmon-server/templates/configMap.yaml
+++ b/deploy/helm/kubenetmon-server/templates/configMap.yaml
@@ -26,3 +26,4 @@ data:
     clickhouse_wait_for_async_insert: {{ .Values.inserter.waitForAsyncInsert }}
     clickhouse_skip_ping: {{ .Values.inserter.skipPing }}
     clickhouse_disable_tls: {{ .Values.inserter.disableTLS }}
+    clickhouse_insecure_skip_verify: {{ .Values.inserter.insecureSkipVerify }}
